--- a/src/inj.css
+++ b/src/inj.css
@@ -1,12 +1,20 @@
 a.focus-first-input-numeric-link {
   position: relative;
   display: inline-block;
-  margin-top: 20px;
 }
 
-a[focus-first-input-numeric-link-number]:after{
+a.focus-first-input-numeric-link[focus-first-input-numeric-link-number]:before {
   content: attr(focus-first-input-numeric-link-number);
+  background-color: black;
+  color: white;
+  text-align: center;  
+  width: auto;
+  padding: 5px;
+  border: 1px solid white;
+  border-radius: 15px;
   position: absolute;
-  top: -100%;
-  left: 0;
+  z-index: 1;
+  min-width: 12px;
+  min-height: 12px;
+  font-size: 12px;
 }
