need to get the ui right so it always displays the overlay over any button regardless of styling on it

--- a/src/inj.css
+++ b/src/inj.css
@@ -1,6 +1,6 @@
 a.focus-first-input-numeric-link {
-  /* position: relative; */
-  /* display: inline-block; */
+  /* position: relative; 
+  display: inline-block; */
 }
 
 a.focus-first-input-numeric-link[focus-first-input-numeric-link-number]:before {
