--- a/src/inj.css
+++ b/src/inj.css
@@ -1,3 +1,21 @@
+.keys-pressed-overlay-element {
+  font-family:"Cutive Mono", monospace;
+  position:fixed;
+  bottom: 0;
+  z-index: 2147483647; /* Chromes maximum z-index - lol.  Don't know how else to do this without js...  Needs to be on top of all the content on any site */
+  width: 100%;
+  text-align: center;
+  color:#fff;
+  font-size:32px;
+  min-height:40px;;
+  display:inline-block;
+  white-space:pre;
+  background:#333;
+  box-shadow:inset 0 0 10px 0 rgba(255,255,255,0.2);
+  padding: 10px;
+  line-height: 1.15;
+}
+
 .focus-first-input-overlay-element {
   position: absolute;
   z-index: 2147483647; /* Chromes maximum z-index - lol.  Don't know how else to do this without js...  Needs to be on top of all the content on any site */
@@ -6,6 +24,7 @@
 }
 
 .focus-first-input-overlay-element[focus-first-input-overlay-element-number]:before {
+  font-family:"Cutive Mono", monospace;
   display: inline-block;
   content: attr(focus-first-input-overlay-element-number);
   background-color: black;
@@ -20,8 +39,6 @@
   height: initial;
   text-indent: initial;
   line-height: 12px;
-  font-family: Roboto, Arial, sans-serif;
   font-size: 12px;
   font-weight: bold;
 }
-
